css/style.css
body {
  background-color: #191765;
  font-family: 'Roboto', sans-serif;
  background-repeat: no-repeat;
  background-position-y: 80px;
}

.icons {
  background: white;
}

i {
  color: white;
  height: 30px;
  margin-top: 5px;
}

.top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 2rem;
  margin-top: 30px;
}

.hamburger {
  display: block;
  cursor: pointer;
  margin-right: 2rem;
}

.bar {
  display: block;
  width: 1.6rem;
  height: 0.2rem;
  margin: 0.3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: white;
}

#hambclose .bar:nth-child(2) {
  opacity: 0;
}

#hambclose .bar:nth-child(1) {
  transform: translateY(0.5rem) rotate(45deg);
}

#hambclose .bar:nth-child(3) {
  transform: translateY(-0.5rem) rotate(-45deg);
}

#hambclose {
  position: fixed;
  top: 3%;
  right: 6%;
}

#hambclose:hover {
  cursor: pointer;
}

.navigationLinks {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 4rem;
  padding-top: 6rem;
  gap: 1.5rem;
  font-weight: 500;
  font-size: 1.5rem;
  background-image: url(../pictures/shape\ mobile\ menu-2.svg);
  background-repeat: no-repeat;
  height: 50%;
}

.menuarrow {
  width: 2rem;
}

.mobMenuItem {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 2rem;
}

.logo {
  padding-left: 30px;
  color: white;
}

a {
  text-decoration: none;
}

.logo-name {
  padding-left: 25px;
  color: white;
  font-weight: 500;
}

.desktopnav {
  display: none;
}

#modalMenu {
  width: 100%;
  height: 100%;
  background-color: #191765;
  background-image: url("../pictures/shape\ mobile\ menu-1.svg");
  background-repeat: no-repeat;
  background-position-x: right;
  background-position-y: bottom;
  position: fixed;
  top: 0;
  left: 0;
  display: none;
}

#closeBtn {
  position: absolute;
  right: 10%;
  top: 6%;
}

#closebtntest,
#closebtntest3,
#closebtnt {
  width: 600px;
}

.portfolio,
#portfolio {
  transition: 0.8s ease;
  color: white;
}

.portfolio:hover {
  color: #9390ff;
  cursor: pointer;
  text-decoration: underline;
}

#portfolio:hover {
  cursor: pointer;
}

.title {
  background-image: url("../pictures/Ellipse18.svg");
  background-repeat: no-repeat;
  padding-bottom: 90px;
  display: flex;
  flex-direction: column;
  justify-items: center;
}

.sep {
  width: 250px;
  border-bottom: 1px solid #646369;
  margin: 0 auto 0 auto;
  margin-top: 30px;
  margin-bottom: 30px;
}

h1 {
  color: #7d73fc;
  font-weight: 700;
  text-align: center;
  padding-top: 55px;
  font-size: 3rem;
  letter-spacing: 0.37px;
}

.proffesion {
  font-weight: 500;
  color: #edecff;
  text-align: center;
  padding-top: 20px;
  font-size: 2rem;
  height: 80px;
  padding-bottom: 50px;
}

.description {
  color: white;
  font-weight: 400;
  font-size: 1.8rem;
  padding-top: 5px;
  margin-left: auto;
  margin-right: auto;
  width: 400px;
}

.habilities {
  padding-top: 20px;
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto;
}

.languajes {
  display: flex;
  flex-direction: column;
  align-content: flex-start;
}

.mixed {
  color: #7d73fc;
  font-weight: 500;
  font-size: 0.8rem;
  line-height: 24px;
  margin-left: 41px;
}

li {
  color: white;
  font-weight: 400;
  font-size: 0.9rem;
  list-style-type: none;
  line-height: 24px;
}

.findMe {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 220px;
  margin-left: auto;
  margin-right: auto;
  flex: 45px 45px 45px 45px 45px;
}

.link8 {
  display: none;
}

.link {
  height: 40px;
  width: 40px;
}

.work {
  color: white;
  font-weight: 500;
  font-size: 1.6rem;
  display: inline-block;
  margin: 1px;
}

.jobdesc {
  display: flex;
  flex-direction: column;
}

.link6 {
  font-size: 1.6rem;
}

.worktitle {
  color: #7d73fc;
  font-size: 3rem;
  text-align: center;
}

.firstback {
  background-image: url("../pictures/Ellipse19.svg");
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-items: center;
}

.worksample1 {
  width: 327px;
  margin: auto;
}

.projectpic1 {
  width: 327px;
  margin-left: auto;
  margin-right: auto;
}

.work1title {
  color: white;
  font-weight: 500;
  font-size: 2rem;
  text-align: center;
  padding-top: 25px;
  width: 250px;
}

.workdescription {
  color: white;
  font-size: 1.3rem;
  font-family: 'inter', sans-serif;
  margin: 20px;
  width: 300px;
}

.usedcode {
  display: flex;
  flex-direction: row;
  gap: 30px;
  align-items: center;
  width: 300px;
}

button {
  background-color: #7d73fc;
  padding: 12px;
  width: 89px;
  margin-left: 20px;
  color: white;
  font-size: 0.6rem;
  border: none;
}

button:hover {
  box-shadow: 0 0 50px lightblue;
}

button:active {
  background: #5e42d7;
}

button:disabled {
  background: #0d052e;
}

.buttontext {
  color: white;
  font-size: 0.6rem;
}

.work2,
.work1,
.work3 {
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-items: center;
  padding-top: 40px;
}

.background2 {
  background-image: url("../pictures/Ellipse20.svg");
  background-position: right;
}

.work2 {
  background-image: url("../pictures/Ellipse20.svg");
  background-position: right;
}

.work3 {
  background-image: url("../pictures/Ellipse21.svg");
  background-position: left;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contactUs {
  margin-top: 120px;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 2rem;
  line-height: 44px;
  color: #9390ff;
}

.contactUs-message {
  font-family: 'Inter', sans-serif;
  text-align: center;
  font-style: normal;
  width: 425px;
  font-weight: 400;
  font-size: 1rem;
  line-height: 24px;
  color: #f5f5ff;
  padding-left: 24px;
  padding-right: 24px;
}

input {
  margin-right: 24px;
  margin-bottom: 24px;
  background: #fff;
  height: 48px;
}

.name {
  margin-top: 40px;
  padding-left: 7px;
  width: 325px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9rem;
  line-height: 24px;
  color: #81818c;
}

.contactemail {
  padding-left: 7px;
  width: 325px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9rem;
  line-height: 24px;
  color: #191765;
}

#request1 {
  height: 148px;
  width: 325px;
  padding-left: 7px;
  padding-top: 10px;
  color: #81818c;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9rem;
  line-height: 24px;
}

.submit {
  padding-left: 5px;
  width: 150px;
  height: 48px;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 0.8rem;
  line-height: 24px;
  color: #edecff;
  margin: auto;
  display: flex;
  justify-content: center;
}

form label {
  visibility: hidden;
}

.myemail {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1.3rem;
  line-height: 28px;
  color: #ebebff;
  margin-bottom: 40px;
}

@media (min-width: 768px) {
  .findMe {
    width: 768px;
    justify-content: space-between;
  }

  .work {
    margin: 1px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .habilities {
    width: 600px;
    margin-left: auto;
    margin-right: auto;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto;
    place-items: center;
  }

  .description {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
  }

  .title {
    background-image: url("../pictures/twocirclesheader.png");
    background-position: center;
    background-size: contain;
  }

  .hamburger {
    display: none;
  }

  .portfolio,
  #portfolio,
  .logo-name {
    display: inline-block;
    color: white;
    font-size: 1.5rem;
    padding-right: 10px;
  }

  .desktopnav {
    display: block;
    padding-right: 2rem;
  }

  .logo-name {
    animation-duration: 0.5s;
    animation-name: rotate;
  }

  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }

    25% {
      transform: rotate(75deg);
    }

    50% {
      transform: rotate(150deg);
    }

    75% {
      transform: rotate(225deg);
    }

    to {
      transform: rotate(360deg);
    }
  }

  #portfolio1 {
    display: none;
  }

  .link8 {
    display: inline;
  }

  .sep {
    width: 450px;
  }

  .work1,
  .work2,
  .work3 {
    width: 968px;
    margin-left: auto;
    margin-right: auto;
    display: grid;
    grid-template-columns: auto auto;
    margin-top: 50px;
    flex-wrap: wrap;
  }

  .jobdesc {
    width: 450px;
    height: 400px;
  }

  .work1title {
    text-align: left;
    padding-top: 0;
    margin-left: 20px;
    margin-top: 20px;
    margin-bottom: 0;
  }

  body {
    background-image: url("../pictures/Ellipse20.svg"), url("../pictures/Ellipse21.svg");
    background-position: right, left;
    background-position-y: 2000px, 2550px;
  }

  .picorder {
    order: 2;
  }

  .contactUs-message {
    width: 550px;
  }

  .name,
  .contactemail,
  #request1 {
    width: 550px;
  }

  .textorder {
    order: 1;
  }

  .bottom {
    justify-content: center;
    align-items: center;
  }

  .myemail {
    margin: 0 0 0 10px;
  }

  .projectpic1 {
    width: 520px;
    height: 405px;
    display: inline-block;
    object-fit: fill;
    transition: width 1s, height 1s;
  }

  .projectpic1:hover {
    width: 560px;
    height: 435px;
  }
}

